added media and the main heading

--- a/css/kasper.css
+++ b/css/kasper.css
@@ -9,6 +9,8 @@
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
+    padding: 0;
+    margin: 0;
   }
   html {
     scroll-behavior: smooth;
@@ -46,6 +48,45 @@
   }
   /* End Global Rules */
 
+  /* Start components */
+
+  .main-heahing {
+    text-align: center;
+  }
+  
+  .main-heahing h2::before {
+    content: '';
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    height: 2px;
+    background-color: #333;
+    bottom: -30px;
+    width: 120;
+  }
+  
+  .main-heahing h2::after {
+    content: '';
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 14px;
+    height: 14px;
+    border-radius: 50%;
+    border: 2px solid  #333;
+    bottom: -38px;
+    background-color: white;
+  }
+  
+  .main-heahing p {
+    width: 550px;
+    margin: 0 auto 100px;
+    max-width: 100%;
+    color: #777;
+  }
+
+  /* End components */
+
 /* start header */
 header {
   position: absolute;
@@ -66,7 +107,7 @@ header .container::after{
   content: '';
   position: absolute;
   left: 15px;
-  bottom: 16px;
+  bottom: 0;
   height: 1px;
   background-color: #a2a2a2;
   width: calc(100% - 30px);
@@ -124,7 +165,7 @@ header nav ul li a:hover {
     background-color: rgba(0, 0, 0, 0.524);
   }
   header nav   ul li a{
-    padding-bottom: 15px !important;
+    padding-bottom: 10px !important;
   }
 }
 header  .form {
@@ -186,6 +227,16 @@ position: relative;
   max-width: 500px ;
 }
 
+@media (max-width: 767px){
+  .Landing .text{
+    width: 100%;
+  }
+
+  .Landing .text .content {
+    max-width: 100%;
+  }
+}
+
 .Landing .text .content h2 {
   font-size: 32px;
   font-weight: normal;
@@ -197,4 +248,48 @@ position: relative;
   font-size: 14px;
   line-height: 2;
 }
+
+.Landing .change-backgrund {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  color: #ddd;
+}
+
+@media (max-width: 767px){
+  .Landing .change-backgrund {
+    display: none;
+  }
+}
+
+.Landing .fa-angle-left  {
+  left: 30px;
+}
+
+.Landing .fa-angle-left {
+  right: 30px;
+}
+
+.Landing .bullets {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 30px;
+  display: flex;
+}
+.Landing .bullets li{
+  width: 20px;
+  height: 20px;
+  border: 1px solid white;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+.Landing .bullets li.active {
+  background-color: var(--main-color);
+  border-color: var(--main-color);
+}
+
+
+
 /* End Landing */
