--- a/css/kasper.css
+++ b/css/kasper.css
@@ -2,6 +2,7 @@
 :root {
     --main-color: #19c8fa;
     --transparent-color:rgb(15 116 143 /70%);
+    --sction-padding:100px:
   }
   /* End Variables */
   /* Start Global Rules */
@@ -17,7 +18,6 @@
   }
   body {
     font-family: "Work Sans", sans-serif;
-    background-color: black;
   }
   ul {
     list-style: none;
@@ -54,6 +54,13 @@
     text-align: center;
   }
   
+  .main-heahing  h2{
+    font-weight: normal;
+    font-size: 40px;
+    position: relative;
+    margin-bottom: 70px;
+    text-transform:uppercase ;
+  }
   .main-heahing h2::before {
     content: '';
     position: absolute;
@@ -62,7 +69,7 @@
     height: 2px;
     background-color: #333;
     bottom: -30px;
-    width: 120;
+    width: 120px;
   }
   
   .main-heahing h2::after {
@@ -293,3 +300,50 @@ position: relative;
 
 
 /* End Landing */
+
+/* Start Serveces */
+
+.serveces {
+  padding-top: var(--sction-padding);
+  padding-bottom: var(--sction-padding);
+}
+
+@media (min-width: 768px){
+  .serveces .serveces-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fill , minmax(450px ,1fr));
+    grid-column-gap:40px;
+    grid-row-gap:60px;
+  }
+}
+.serveces .srv-box{
+  display: flex  ;
+}
+.serveces .srv-box i{
+  margin-right: 50px;
+}
+
+@media (max-width: 767px){
+  .serveces .srv-box {
+     display: flex;
+     flex-direction: column;
+     text-align: center;
+     margin-bottom: 40px;
+  }
+  .serveces .srv-box i {
+    margin: 0 0 30px;
+
+  }
+}
+.serveces .srv-box h3{
+  margin-bottom: 30px;
+  color: var(--main-color);
+}
+.serveces .srv-box p{
+  line-height: 2;
+  color: #777;
+}
+
+
+
+/* End Serveces */
