--- a/css/kasper.css
+++ b/css/kasper.css
@@ -347,3 +347,74 @@ position: relative;
 
 
 /* End Serveces */
+
+/* Start Design */
+.design {
+  padding-top: var(--sction-padding);
+  padding-bottom: var(--sction-padding);
+  height: 600px;
+  position: relative;
+  background-image: url(../images/images.jpg);
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+}
+
+.design::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0 0 0 /60%);
+
+}
+
+.design .image,
+.design .text{
+  position: relative;
+  z-index: 2;
+  flex: 1;
+}
+
+.design .image {
+ text-align: center;
+}
+
+@media (max-width: 767px){
+  .design .image {
+    display: none;
+  }
+}
+.design .image img{
+  position: relative;
+  bottom: -150px;
+}
+
+.design .text {
+   color: white;
+   padding: 50px;
+   background-color: var(--transparent-color);
+}
+
+.design .text h2 {
+  font-weight: normal;
+  text-transform: uppercase;
+  margin-bottom: 40px;
+}
+.design .text ul li {
+ padding: 15px 0;
+}
+.design .text ul li::before {
+ font-family: 'font Awsome 5 free';
+ content: '\f390';
+ font-weight: 900;
+ margin-right: 20px;
+ position: absolute;
+ top: 1px;
+}
+
+
+/* End Design */
