--- a/css/kasper.css
+++ b/css/kasper.css
@@ -416,3 +416,162 @@ position: relative;
  top: 1px;
 }
 /* End Design */
+
+/* Start Portfolin */  
+
+.portfolio {
+  padding-top: var(--sction-padding);
+  padding-bottom: var(--sction-padding);
+}
+
+.portfolio .shuffle {
+  display: flex;
+  justify-content: center;
+}
+
+.portfolio .shuffle li {
+  padding: 10px;
+}
+
+.portfolio .shuffle li.active {
+background-color: var(--main-color);
+color: white;
+}
+
+.portfolio .imgs-container {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 60px;
+}
+
+.portfolio .imgs-container .box {
+  overflow: hidden;
+  position: relative;
+}
+
+.portfolio .imgs-container .box:hover .caption {
+  bottom: 0;
+}
+
+.portfolio .imgs-container .box:hover img {
+  transform: rotate(3deg) scale(1.1);
+}
+
+@media (min-width: 768px){
+  .portfolio .imgs-container .box{
+    flex-basis: 50%;
+  }
+}
+
+@media (min-width: 1199px){
+  .portfolio .imgs-container .box{
+    flex-basis: 25%;
+  }
+}
+
+.portfolio .imgs-container .box img{
+  max-width: 100%;
+  transition: 0.3s;
+}
+
+.portfolio .imgs-container .box .caption {
+position: absolute;
+left: 0;
+padding: 20px;
+background-color: white; 
+width: 100%;
+transition: 0.3s;
+bottom: -100%;
+
+}
+
+.portfolio .imgs-container .box .caption  h4{
+  font-weight: normal;
+  margin-bottom: 10px;
+}
+.portfolio .imgs-container .box .caption  p{
+  color: var(--main-color);
+}
+
+.portfolio .more {
+background-color: var(--main-color);
+color: white;
+padding: 15px 20px;
+display: block;
+width: fit-content;
+margin: 30px auto;
+text-decoration: none;
+text-transform: uppercase;
+}
+
+.portfolio .more:hover {
+  color: var(--transparent-color);
+}
+/* End Portfolin */  
+
+/* Start Video */
+
+.video {
+  position: relative;
+  width: 100%;
+}
+
+.video::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0 0 0 / 40%);
+}
+
+.video .text {
+ width: 100%;
+ position: absolute;
+ top: 50%;
+ transform: translateY(-50%);
+ padding: 50px;
+ background-color: var(--main-color);
+ color: white;
+ text-align: center;
+}
+.video .text h2 {
+margin: 0 0 30px;
+text-transform: uppercase;
+font-weight: normal;
+}
+.video .text p {
+margin-bottom: 30px;
+}
+.video .text button {
+  background-color: black;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  text-transform: uppercase;
+  border-radius: 10px;
+}
+ 
+/* End Video */
+
+/* Start About */
+.about {
+  padding-top: var(--sction-padding);
+  overflow: hidden;
+}
+
+.about img {
+  position: relative;
+  bottom: -120px;
+  margin-top: -120px;
+  max-width: 100%;
+}
+
+@media (max-width: 767px){
+  .about img {
+    bottom: -60px;
+    margin-top: -60px;
+  }
+}
+/* End About */
