--- a/css/kasper.css
+++ b/css/kasper.css
@@ -559,6 +559,7 @@ margin-bottom: 30px;
 .about {
   padding-top: var(--sction-padding);
   overflow: hidden;
+  text-align: center;
 }
 
 .about img {
@@ -575,3 +576,75 @@ margin-bottom: 30px;
   }
 }
 /* End About */
+
+/* Start Stats */
+
+.stats {
+  padding-top: var(--sction-padding);
+  padding-bottom: var(--sction-padding);
+  text-align: center;
+  background-image: url("../images/statis.png");
+  background-size: cover;
+  position: relative;
+}
+
+.stats::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0 0 0 /60%);
+}
+ 
+.stats .container {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+
+}
+
+.stats .container .box{
+ color: white;
+ padding: 50px;
+ background-color: var(--transparent-color);
+}
+
+@media (max-width: 767px){
+  .stats .container .box{
+    flex-basis: 100%;
+   }
+}
+@media (min-width: 768px){
+  .stats .container .box{
+    flex-basis: 50%;
+   }
+}
+@media (min-width: 992px){
+  .stats .container .box{
+    flex-basis: 25%;
+   }
+}
+
+.stats .container .box i {
+  width: 40px;
+  height: 40px;
+  display: flex;
+  background-color: black;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  margin: 0 auto 30px;
+}
+
+.stats .container .box .number {
+  font-size: 50px;
+  font-weight: bold;
+  margin: 0 0 20px;
+}
+
+.stats .container .box p {
+font-size: 14px;
+}
+/* End Stats */
