--- a/css/kasper.css
+++ b/css/kasper.css
@@ -2,7 +2,7 @@
 :root {
     --main-color: #19c8fa;
     --transparent-color:rgb(15 116 143 /70%);
-    --sction-padding:100px:
+    --section-padding: 100px:
   }
   /* End Variables */
   /* Start Global Rules */
@@ -895,4 +895,234 @@ font-size: 14px;
   text-decoration: none;
 }
 /* End Pricing */
-/* End Pricing */
+
+/* Start Subcribe */
+.subscribe {
+  padding-top: 100px;
+  padding-bottom:100px;
+  background-image: url("../images/statis.png") ;
+  background-size: cover;
+  position: relative;
+  color: white;
+}
+
+.subscribe::before{
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0; 
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0 0 0 /60%);
+}
+
+.subscribe .container {
+  position: relative;
+  display: flex;
+  align-items: center;
+  margin-top: 50px;
+}
+
+@media (max-width: 991px){
+  .subscribe .container  {
+    flex-direction: column;
+  }
+}
+
+.subscribe form {
+  display: flex;
+  position: relative;
+  width: 500px;
+  max-width: 100%;
+} 
+.subscribe form i {
+
+} 
+.subscribe form  input[type="email"]{
+  border: 1px solid white;
+  border-radius: none;
+  background: none;
+  padding: 20px 20px 20px 60px ;
+  caret-color: var(--main-color);
+  width: calc(100% - 130px);
+} 
+.subscribe form  input[type="submit"]{
+  width: 130px;
+  background-color: var(--main-color);
+  color: white;
+  padding: 10px 20px;
+  border: 1px solid white;
+  border-left: none;
+  text-transform: uppercase;
+} 
+
+.subscribe form  input[type="email"]:focus,
+.subscribe form  input[type="submit"]:focus {
+  outline: none;
+}
+
+
+.subscribe .form ::placeholder {
+  color: white;
+}
+
+.subscribe form i {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.subscribe p {
+  line-height: 2;
+  margin-left: 50px;
+}
+
+@media (max-width: 991px){
+  .subscribe p {
+    margin: 30px 0 0;
+  }
+}
+/* End Subcribe */
+
+/* Start Contact */
+.contact {
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
+.contact .content {
+  display: flex;
+  justify-content: space-between;
+}
+
+@media (max-width: 767px) {
+  .contact .content {
+    flex-direction: column;
+  }
+}
+ 
+.contact .content form {
+  flex-basis: 70%;
+}
+
+.contact .content form .main-input {
+   padding: 20px;
+   display: block;
+   border: 1px solid #ccc;
+   margin-bottom: 30px;
+   width: 100%;
+}
+
+.contact .content form .main-input:focus {
+  outline: none;
+}
+
+.contact .content form textarea.main-input {
+  height: 200px;
+}
+
+.contact .content form input[type="submit"] {
+  background-color: var(--main-color);
+  color: white;
+  padding: 20px;
+  border: none;
+  display: flex;
+  margin-left: auto;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+  
+.contact .content .info {
+  flex-basis: 25%;
+}
+
+@media (max-width: 767px) {
+  .contact .content .info  {
+    display: flex;
+    justify-content: space-around;
+    order: -1;
+    text-align: center;
+  }
+
+}
+
+.contact .content .info h4{
+  text-transform: uppercase;
+  margin-bottom: 30px;
+  font-size: 18px;
+  font-weight: 500;
+}
+.contact .content .info .phone{
+  display: block;
+  color: #777;
+  margin-bottom: 10px;
+}
+.contact .content .info h4:nth-of-type(2){
+  margin-top: 90px;
+}
+
+@media (max-width: 767px) {
+  .contact .content .info h4:nth-of-type(2) {
+    margin-top: 30px;
+  }
+}
+@media (max-width: 767px) {
+  .contact .content .info address {
+    margin-bottom: 40px;
+  }
+}
+.contact .content .info address {
+  color: #777;
+  line-height: 2;
+}
+/* End Contact */
+
+/* Start Footer */
+.footer {
+  padding-top: 50px;
+  padding-bottom: 50px;
+  background-color: url("../images/statis.png");
+  background-size: cover;
+  position: relative;
+  color: white;
+  text-align: center;
+}
+
+.footer::before {
+   content: "";
+   position: absolute;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
+   background-color: rgba(0 0 0 /60%);
+}
+
+.footer .container {
+  position: relative;
+}
+
+.foot img {
+  margin-bottom: 20px;
+}
+.footer p:not(.copyright) {
+   text-transform: uppercase;  
+   padding: 20px;
+   border-bottom: 1px solid white;
+   font-size: 22px;
+   width: fit-content;
+   margin: 20px auto;
+}
+
+.footer .social-icons i {
+  padding: 10px 15px;
+}
+
+.footer .copyright {
+  margin-top: 60px;
+}
+.footer .copyright  span {
+   font-weight: bold;
+   color: var(--main-color);
+}
+/* End Footer */
